replace settings#rowProcessor setter and getter with settings#processor